<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.campustransaction.ui.UIViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.userInfo.UserInfoFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:gravity="top"
            android:orientation="vertical"
            tools:context=".ui.userInfo.UserInfoFragment">

            <!-- <de.hdodenhof.circleimageview.CircleImageView -->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/headPortrait"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/head_portrait"
                android:layout_marginTop="15dp"
                android:src="@drawable/my_avatar" />

            <TextView
                android:id="@+id/my_emailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/email_address"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_personal_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:drawableStart="@drawable/my_released"
                android:layout_marginTop="10dp"
                android:text="@string/personal_center" />

            <Button
                android:id="@+id/button_my_posts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:drawableStart="@drawable/my_released"
                android:layout_marginTop="10dp"
                android:text="@string/my_posts" />

            <Button
                android:id="@+id/button_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:drawableStart="@drawable/my_released"
                android:layout_marginTop="10dp"
                android:text="@string/reset_password" />

            <Button
                android:id="@+id/button_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:drawableStart="@drawable/my_released"
                android:layout_marginTop="10dp"
                android:text="@string/setting" />

            <Button
                android:id="@+id/button_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:drawableStart="@drawable/my_released"
                android:layout_marginTop="10dp"
                android:text="@string/about" />

            <Button
                android:id="@+id/button_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGreen"
                android:text="@string/logout"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="30dp"/>

        </LinearLayout>
    </FrameLayout>
</layout>